Fix projects styling on mobile/tablet

--- a/src/components/projects/ProjectInfo.scss
+++ b/src/components/projects/ProjectInfo.scss
@@ -50,16 +50,7 @@
       @mixin tablet {
         @media (max-width: 600px) {
           @content;
-          
-          .project-container {
-              .project-content {
-                  .project-details {
-                      ul {
-                          display: initial;
-                      }
-                  }
-              }
-          }
+
         }
       }
       
@@ -85,10 +76,29 @@
         position: relative;
         grid-column: 1 / 7;
         grid-row: 1 / -1;
+
+        ul {
+            display: flex;
+            margin-top: 20px;
+      
+            li {
+              margin-right: 20px;
+              color: #aaa;
+              font-family: monospace;
+            }
+          }
       
         @include tablet {
           grid-column: 1 / -1;
           padding: 40px;
+          
+          
+            .project-details {
+                ul {
+                    display: block;
+                }
+            }
+        
         }
       
         .project-label {
@@ -115,27 +125,20 @@
             @include tablet {
               background-color: transparent;
               padding: 20px 0;
+
+              ul {
+                  display: block;
+              }
             }
           }
       
-          ul {
-            display: flex;
-            margin-top: 20px;
-      
-            li {
-              margin-right: 20px;
-              color: #aaa;
-              font-family: monospace;
-            }
-          }
+          
         }
       }
       
       .project-img {
         position: relative;
         z-index: -1;
-        // background-color: #fa5500;
-        // background: linear-gradient(0.4turn, #fa5500, #ffa600);
         border-radius: 2px;
         grid-column: 6 / -1;
         grid-row: 1 / -1;
@@ -144,8 +147,15 @@
           height: 100%;
         }
         @include tablet {
-          grid-column: 1 / -1;
-          opacity: 0.25;
+            grid-column: 1 / -1;
+            opacity: 0.25;
+            background-color: #fa5500;
+            background: linear-gradient(0.4turn, #fa5500, #ffa600);
+            img {
+                mix-blend-mode: multiply;
+                filter: grayscale(100%) contrast(1);
+            }
+            
         }
       
         &:before {
@@ -166,8 +176,6 @@
         img {
           border-radius: 2px;
           position: relative;
-        //   mix-blend-mode: multiply;
-        //   filter: grayscale(100%) contrast(1);
           cursor: pointer;
            
           @media screen and (max-width: 768px) {
@@ -181,7 +189,6 @@
     .link-icon, .github-icon {
         filter: invert(49%) sepia(93%) saturate(4848%) hue-rotate(5deg) brightness(99%) contrast(106%);
         margin-right: 10px;
-        // margin-top: 10px;
         width: 35px;
         height: 35px;
     }
@@ -189,6 +196,7 @@
     .link-icon:hover, .github-icon:hover {
         filter: invert(74%) sepia(63%) saturate(6711%) hue-rotate(347deg) brightness(103%) contrast(101%);
     }
+
 }
   
   
